apps/prod2/tibuild/v2/envoy-security-policy-v2-auth.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: v2-tibuild-v2-auth
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: v2-tibuild-v2-auth
  basicAuth:
    users:
      name: httproute-auth-secret
